@@ -1,3 +1,7 @@
+2005-10-17  Julien MOUTTE  <julien@moutte.net>
+
+	* gst/gstvalue.h: Fix prototypes.
+
 2005-10-16  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* docs/gst/gstreamer-sections.txt:
